--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -37,3 +37,10 @@ stages:
         containerRegistry: $(dockerRegistryServiceConnection)
         tags: |
           $(tag)
+
+    - task: AzureWebAppContainer@1
+      inputs:
+       azureSubscription: 'Visual Studio Enterprise Subscription (ce9ae6de-058b-4cf9-ac15-d9a6211f2493)'
+       appName: 'chethanapp'
+       containers: 'chethanacr.azurecr.ioimagechethandockerhelloworldflask'
+      
